--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,13 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "/ws-ref/icon-512.png",
+      "src": "/ws-ref/icon.png",
       "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/ws-ref/192-icon.png",
+      "sizes": "192x192",
       "type": "image/png"
     }
   ]
